added website details and credits

--- a/Project_Website/templates/index_form.html
+++ b/Project_Website/templates/index_form.html
@@ -313,6 +313,7 @@ textarea{
       <p><input class="w3-input w3-hover-light-grey w3-border-0" name="name" type="text" placeholder="Name"></p>
       <p><input class="w3-input w3-hover-light-grey w3-border-0" name="email" type="text" placeholder="Email-ID (Optional)"></p>
 
+       <!-- Text for diagnosis -->
     <div class="w3-white w3-block w3-container w3-margin-top w3-btn w3-dark-gray">
 
       <p onclick="myFunction('diagnosis_text')" class="w3-text-white w3-large"> Diagnosis </p>
@@ -321,6 +322,7 @@ textarea{
 
     </div>
 
+       <!-- Text for lab tests -->
      <div class="w3-white w3-block w3-container w3-margin-top w3-btn w3-dark-gray">
 
       <p onclick="myFunction('labtests_text')" class="w3-text-white w3-large"> Lab Tests </p>
