included the descriptions  for the diagnosis and changed the font

--- a/Project_Website/templates/email.html
+++ b/Project_Website/templates/email.html
@@ -141,7 +141,7 @@
                                              <td width="174" height="60" align="left">
                                                 <div class="imgpop">
                                                    <a target="_blank" href="#">
-                                                   <img src="images/icon.png" alt="" border="0" style="display:block; border:none; outline:none; text-decoration:none; width:25%">
+                                                   <img src="../static/images/icon.png" alt="" border="0" style="display:block; border:none; outline:none; text-decoration:none; width:25%">
                                                    </a>
                                                 </div>
                                              </td>
@@ -183,7 +183,7 @@
                                  <!-- start of image -->
                                  <td align="center" st-image="banner-image">
                                     <div class="imgpop">
-                                       <a target="_blank" href="#"><img width="560" border="0" alt="" border="0" style="display:block; border:none; outline:none; text-decoration:none;" src="images/hospital.jpg" class="banner"></a>
+                                       <a target="_blank" href="#"><img width="560" border="0" alt="" border="0" style="display:block; border:none; outline:none; text-decoration:none;" src="../static/images/hospital.jpg" class="banner"></a>
                                     </div>
                                  </td>
                               </tr>
