--- a/Project_Website/templates/thankyou.html
+++ b/Project_Website/templates/thankyou.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-
-    <title> Diagnosis Predictor</title>
+<title> Diagnosis Predictor</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+<link href='//fonts.googleapis.com/css?family=Courgette' rel='stylesheet'>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="icon" type="image/gif/png" href="https://cdn2.iconfinder.com/data/icons/medical-icons-6/48/4-512.png">
 <style>
@@ -47,18 +47,19 @@
 <br />
 <br />
 <!-- Header -->
-<footer class="w3-container w3-center w3-padding-128" style="max-with:600px">
-  <h2 class="w3-wide">Thank you for your feedback</h2>
-</footer>
+<header class="w3-container w3-center w3-padding-128" style="max-with:600px">
+  <h2 class="w3-wide" style="font-family: Courgette">Thank you for your feedback</h2>
+</header>
 
 
 
 
+<!-- Footer -->
 <footer class="w3-center w3-black w3-padding-24 w3-opacity w3-hover-opacity-off w3-bottom">
       <div class="w3-xxxlarge w3-section">
     <a href="https://naresh1318.github.io/DiagnosisPredictor/"><i class="fa fa-github w3-hover-text-indigo"></i></a>
       </div>
-    <h5>By Harshith, Naresh, Nishank and Puneeth</h5>
+    <h5 style="font-family: Courgette">By Harshith, Naresh, Nishank and Puneeth</h5>
 </footer>
 
 <script>
