--- a/Project_Website/templates/index.html
+++ b/Project_Website/templates/index.html
@@ -38,7 +38,7 @@ body, html {
 
 /* Third image (Contact) */
 .bgimg-3 {
-    background-image: url("images/doc.jpg");
+    background-image: url("../static/images/doc.jpg");
     min-height: 400px;
 }
 
