added the all tests description

--- a/Project_Website/templates/results_page.html
+++ b/Project_Website/templates/results_page.html
@@ -253,7 +253,7 @@ function get_summary(labtests_id, diagnosis_id){
     row1.insertCell(0).innerHTML = '<b> ICD 9 </b>';
     row1.insertCell(1).innerHTML = '<b> Name </b>';
 }
-get_summary('lab_text', 'diagnosis_text')
+get_summary('lab_text', 'diagnosis_text');
 
 $(document).ready(function(){
   // Add smooth scrolling to all links
