fixed the summary bug

--- a/Project_Website/templates/index_form.html
+++ b/Project_Website/templates/index_form.html
@@ -372,7 +372,7 @@ textarea{
 
       <p onclick="myFunction('diagnosis_text_pat')" class="w3-text-white w3-large font-heading"> Diagnosis </p>
 
-      <textarea name="diagnosis_text" id="diagnosis_text_pat" rows="4" cols="100" class="w3-hide w3-margin-bottom w3-animate-right" placeholder="ICD 9 codes">250,362,442</textarea>
+      <textarea name="diagnosis_text" id="diagnosis_text_pat" rows="4" cols="100" class="w3-hide w3-margin-bottom w3-animate-right" placeholder="ICD 9 codes"></textarea>
 
 
     </div>
@@ -382,7 +382,7 @@ textarea{
 
       <p onclick="myFunction('labtests_text_pat')" class="w3-text-white w3-large font-heading"> Lab Tests </p>
 
-      <textarea name="labtests_text" id="labtests_text_pat" rows="4" cols="100" class="w3-hide w3-margin-bottom w3-animate-right" placeholder="Lab test codes">51275,50868,50882</textarea>
+      <textarea name="labtests_text" id="labtests_text_pat" rows="4" cols="100" class="w3-hide w3-margin-bottom w3-animate-right" placeholder="Lab test codes"></textarea>
 
     </div>
 
