--- a/Project_Website/templates/results_page.html
+++ b/Project_Website/templates/results_page.html
@@ -3,6 +3,10 @@
 <head>
 <title> Diagnosis Predictor</title>
 <meta charset="UTF-8">
+<!-- Chrome, Firefox OS and Opera -->
+<meta name="theme-color" content="#000000" />
+<!-- iOS Safari -->
+<meta name="apple-mobile-web-app-status-bar-style" content="#000000">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
@@ -12,22 +16,56 @@
 <link rel="icon" type="image/gif/png" href="https://cdn2.iconfinder.com/data/icons/medical-icons-6/48/4-512.png">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 <style>
+
 .small_div{
-  width: 90%
+  width: 100%
 }
 
 .small_div_header{
   width: 80%
 }
-
+.small_cards{
+    width: 100%;
+}
+.small_help{
+    margin-left: 0%;
+    width: 75%;
+}
 /* Turn off parallax scrolling for tablets and phones */
 @media screen and (min-width: 480px) {
     .small_div {
-      width: 60%
+      width: 90%
     }
     .small_div_header{
       width: 30%
     }
+    .small_cards{
+        width: 85%;
+    }
+    .overlay {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      height: 100%;
+      width: 100%;
+      opacity: 0;
+      transition: .5s ease;
+      background-color: #ffffff;
+    }
+
+    .text {
+      color: #000000;
+      font-size: 15px;
+      position: absolute;
+    }
+
+    .small_help{
+        margin-left: 55%;
+        width: 30%
+    }
+
 }
 .container {
   position: relative;
@@ -40,7 +78,7 @@
 }
 
 .overlay {
-  position: absolute;
+  position: relative;
   top: 0;
   bottom: 0;
   left: 0;
@@ -48,7 +86,6 @@
   height: 100%;
   width: 100%;
   opacity: 0;
-  transition: .5s ease;
   background-color: #ffffff;
 }
 
@@ -59,9 +96,9 @@
 .text {
   color: #000000;
   font-size: 15px;
-  position: absolute;
-
+  position: relative;
 }
+
 .font-paragraph{
   font-family: Ubuntu;
 }
@@ -80,7 +117,7 @@
   <p class="w3-opacity"><i>hope it's not too bad</i></p>
 </section>
 
-<div class="w3-container" style="margin-left: auto; margin-right: auto;" class="small_div">
+<div class="w3-container small_div" style="margin-left: auto; margin-right: auto;">
 
     <!-- Header of diagnosis -->
     <div class="w3-container w3-center small_div_header" style="margin-left: auto; margin-right: auto;">
@@ -128,6 +165,7 @@
 
 <!-- Header of diagnosis -->
 <div class="w3-container w3-center small_div_header" style="margin-left: auto; margin-right: auto;">
+
     <div class="w3-panel w3-card-8 w3-dark-grey">
 
         <p><span class="w3-wide font-heading">Predicted Diagnosis</span> </p>
@@ -155,8 +193,7 @@
 {% for row in length %}
 <div class="w3-container">
 
-
-    <div class="w3-panel w3-card-12 w3-hover-shadow w3-btn w3-white w3-cell-row" style="margin-left: auto; margin-right: auto; width: 85%" onclick="myFunction('demo1{{loop.index}}')">
+    <div class="w3-panel w3-card-12 w3-hover-shadow w3-white w3-cell-row small_cards" style="margin-left: auto; margin-right: auto; cursor: pointer;" onclick="myFunction('demo1{{loop.index}}')">
             <div class="w3-container w3-cell" style="width: 20%">
               <p style="font-family:courier; text-align:left;"> {{row[0]}}  </p>
             </div>
@@ -164,23 +201,24 @@
             <div class="w3-container w3-cell" style="width: 20%">
               <p style="font-family:courier; text-align:left;"> {{row[1]}} </p>
             </div>
+
             <div class="w3-container w3-cell" style="width: 60%">
               <p style="font-family:courier; text-align:left;"> {{row[2]}} </p>
             </div>
     </div>
 
-    <div id="demo1{{loop.index}}" class="w3-hide w3-animate-bottom w3-container w3-card-12 w3-animate-opacity w3-left-align w3-container" style="margin-left: auto; margin-right: auto; width: 85%">
+    <div id="demo1{{loop.index}}" class="w3-hide w3-animate-bottom w3-container w3-card-12 w3-animate-opacity w3-left-align w3-container small_cards" style="margin-left: auto; margin-right: auto;">
         <div class="container">
             <img src={{row[3][0]}} alt="Avatar" class="image">
-            <div class="overlay">
-                <div class="text">{{row[3][1]}}</div>
+            <div class="">
+                <div class="">{{row[3][1]}}</div>
             </div>
         </div>
     </div>
 
-
 </div>
 {% endfor %}
+
 <br>
 
 <!-- Feedback -->
@@ -190,7 +228,7 @@
         <textarea class="w3-hide" name="input_sequence" id="input_sequence">{{input_seq}}</textarea>
         <textarea class="w3-hide" name="lab_text_feedback" id="lab_text_feedback">{{lab_text}}</textarea>
         <textarea class="w3-hide" name="diagnosis_text_feedback" id="diagnosis_text_feedback">{{diagnosis_text}}</textarea>
-        <input class="w3-container w3-card-8 w3-btn w3-white w3-padding w3-hover-shadow font-heading" type="submit" style="width:30%; margin-left: 55%;" value="Help us improve the results!" />
+        <input class="w3-container w3-card-8 w3-btn w3-white w3-padding w3-hover-shadow font-heading small_help" type="submit" value="Help us improve the results!" />
     </form>
     <br />
 </div>
