--- a/Project_Website/templates/thankyou.html
+++ b/Project_Website/templates/thankyou.html
@@ -17,14 +17,19 @@
 .small_div_header{
   width: 80%
 }
-
+.small_spaces{
+  margin-top: -5%
+}
 /* Turn off parallax scrolling for tablets and phones */
 @media screen and (min-width: 480px) {
     .small_div {
-      width: 60%
+        width: 60%
     }
     .small_div_header{
-      width: 30%
+        width: 30%
+    }
+    .small_spaces{
+        margin-top: 5%
     }
 }
 
@@ -44,10 +49,9 @@
 
 <body>
 
-<br />
-<br />
+
 <!-- Header -->
-<header class="w3-container w3-center w3-padding-128" style="max-with:600px">
+<header class="w3-container w3-center w3-padding-128 small_spaces">
   <h2 class="w3-wide" style="font-family: Courgette">Thank you for your feedback</h2>
 </header>
 
