changed the tab color

--- a/Project_Website/templates/index_form.html
+++ b/Project_Website/templates/index_form.html
@@ -227,7 +227,7 @@ textarea{
       </header>
       <div class="w3-container">
   <center>
-  <div id="loading" style="width:50%"><img src="https://d13yacurqjgara.cloudfront.net/users/12755/screenshots/1037374/hex-loader2.gif" alt="" style="width:250px"/> </div>
+  <div class="w3-black" id="loading" style="width:90%"><img src="https://d13yacurqjgara.cloudfront.net/users/12755/screenshots/1037374/hex-loader2.gif" alt="" style="width:250px"/> </div>
   </center>
       </div>
       <footer class="w3-container w3-dark-grey font-paragraph">
