--- a/Project_Website/templates/feedback.html
+++ b/Project_Website/templates/feedback.html
@@ -3,6 +3,10 @@
 <head>
 <title> Diagnosis Predictor</title>
 <meta charset="UTF-8">
+<!-- Chrome, Firefox OS and Opera -->
+<meta name="theme-color" content="#000000" />
+<!-- iOS Safari -->
+<meta name="apple-mobile-web-app-status-bar-style" content="#000000">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
