changed the description

--- a/Project_Website/templates/index_form.html
+++ b/Project_Website/templates/index_form.html
@@ -227,11 +227,11 @@ textarea{
       </header>
       <div class="w3-container">
   <center>
-  <div class="w3-black" id="loading" style="width:90%"><img src="https://d13yacurqjgara.cloudfront.net/users/12755/screenshots/1037374/hex-loader2.gif" alt="" style="width:250px"/> </div>
+  <div id="loading" style="width:90%"><img src="https://d13yacurqjgara.cloudfront.net/users/12755/screenshots/1037374/hex-loader2.gif" alt="" style="width:250px"/> </div>
   </center>
       </div>
       <footer class="w3-container w3-dark-grey font-paragraph">
-        <p class="font-paragraph">It usually takes about 3 minutes to get the output.</p>
+        <p class="font-paragraph">It usually takes about 4 minutes to get the output.</p>
       </footer>
     </div>
   </div>
@@ -254,7 +254,7 @@ textarea{
         </li>
         <li>
         Verify if the previous history entered is correct and click on the predict button to predict the most likely future
-            diagnosis. It most me noted that the prediction and take as long as 3 minutes.
+            diagnosis. It most be noted that the prediction can take as long as 4 minutes.
         </li>
         <li>
             You can hover over the results in the results page to get further information about the diagnosis.
@@ -338,7 +338,7 @@ textarea{
       </div>
 
       <footer class="w3-container w3-dark-grey">
-        <p class="font-paragraph">It usually takes about 3 minutes to get the output.</p>
+        <p class="font-paragraph">It usually takes about 4 minutes to get the output.</p>
       </footer>
 
     </div>
@@ -417,7 +417,7 @@ textarea{
       </div>
 
       <footer class="w3-container w3-dark-grey">
-        <p class="font-paragraph">It usually takes about 2 minutes to get the output.</p>
+        <p class="font-paragraph">It usually takes about 4 minutes to get the output.</p>
       </footer>
 
     </div>
@@ -432,7 +432,7 @@ textarea{
 
 
   <div class="w3-panel w3-leftbar">
-      <p class="font-paragraph"><b><i>Note : </i></b> It usually takes about 2 minutes to get the output,
+      <p class="font-paragraph"><b><i>Note : </i></b> It usually takes about 4 minutes to get the output,
         so you can continue what you were doing.</p>
   </div>
 
